--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +79,12 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 5\u001b[0m\n\u001b[1;32m      4\u001b[0m db_anno_intron \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.intron.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 5\u001b[0m db \u001b[38;5;241m=\u001b[39m \u001b[43mgffutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFeatureDB\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_anno_gencode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m db_intron \u001b[38;5;241m=\u001b[39m gffutils\u001b[38;5;241m.\u001b[39mFeatureDB(db_anno_intron)\n",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      4\u001b[0m db_anno_intron \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.intron.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 5\u001b[0m db \u001b[38;5;241m=\u001b[39m \u001b[43mgffutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFeatureDB\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_anno_gencode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m db_intron \u001b[38;5;241m=\u001b[39m gffutils\u001b[38;5;241m.\u001b[39mFeatureDB(db_anno_intron)\n",
       "File \u001b[0;32m~/miniforge3/envs/wesanno/lib/python3.9/site-packages/gffutils/interface.py:179\u001b[0m, in \u001b[0;36mFeatureDB.__init__\u001b[0;34m(self, dbfn, default_encoding, keep_order, pragmas, sort_attribute_values, text_factory)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(dbfn):\n\u001b[0;32m--> 179\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDatabase file \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m does not exist\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m dbfn)\n\u001b[1;32m    180\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdbfn \u001b[38;5;241m=\u001b[39m dbfn\n",
       "\u001b[0;31mValueError\u001b[0m: Database file ../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.gtf.db does not exist",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m     db_anno_gencode \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/resources/DBs/gencode.v43lift37.annotation.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      9\u001b[0m     db_anno_intron \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 10\u001b[0m     db \u001b[38;5;241m=\u001b[39m \u001b[43mgffutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFeatureDB\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_anno_gencode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m     db_intron \u001b[38;5;241m=\u001b[39m gffutils\u001b[38;5;241m.\u001b[39mFeatureDB(db_anno_intron)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m########   Import TSVs, VCFs and GFFs   ########\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m### Downloaded database files\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m#1. Clinvar variants (BED format)\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m     db_anno_gencode \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/resources/DBs/gencode.v43lift37.annotation.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      9\u001b[0m     db_anno_intron \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 10\u001b[0m     db \u001b[38;5;241m=\u001b[39m \u001b[43mgffutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFeatureDB\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdb_anno_gencode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m     db_intron \u001b[38;5;241m=\u001b[39m gffutils\u001b[38;5;241m.\u001b[39mFeatureDB(db_anno_intron)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m########   Import TSVs, VCFs and GFFs   ########\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m### Downloaded database files\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m#1. Clinvar variants (BED format)\u001b[39;00m\n",
       "File \u001b[0;32m~/miniforge3/envs/wesanno/lib/python3.9/site-packages/gffutils/interface.py:179\u001b[0m, in \u001b[0;36mFeatureDB.__init__\u001b[0;34m(self, dbfn, default_encoding, keep_order, pragmas, sort_attribute_values, text_factory)\u001b[0m\n\u001b[1;32m    177\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    178\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(dbfn):\n\u001b[0;32m--> 179\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDatabase file \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m does not exist\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m dbfn)\n\u001b[1;32m    180\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdbfn \u001b[38;5;241m=\u001b[39m dbfn\n\u001b[1;32m    181\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconn \u001b[38;5;241m=\u001b[39m sqlite3\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdbfn)\n",
       "\u001b[0;31mValueError\u001b[0m: Database file /resources/DBs/gencode.v43lift37.annotation.gtf.db does not exist"
      ]
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,14 +504,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/08/01 01:03:37 [INFO   ] (__main__) - Annotating Screening scores...\n",
+      "2024/08/01 02:00:42 [INFO   ] (__main__) - Annotating Screening scores...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "9944\n",
       "6406\n"
      ]
@@ -560,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_71212/817368064.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_79217/817368064.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.fillna('.', inplace=True)\n"
      ]
     },
@@ -623,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +700,7 @@
        "1339"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +822,7 @@
        "1330"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,13 +834,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8038966a304940a985b7e997803706a6",
+       "model_id": "692da6c1f76744d9b0cdd5062de1f03b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -844,7 +850,7 @@
        "              'mode': 'markers',\n",
        "              'selected': {'marker': {'color': 'firebrick'}},\n",
        "              'type': 'scatter',\n",
-       "              'uid': '263e7142-7f4e-4e3f-afae-509acaedfcb6',\n",
+       "              'uid': 'dd263ace-18cc-42e0-adcb-f42de8fffc1c',\n",
        "              'unselected': {'marker': {'opacity': 0.3}},\n",
        "              'x': array([0, 0, 0, ..., 0, 0, 0]),\n",
        "              'y': array([0.01, 0.05, 0.01, ..., 0.  , 0.01, 0.01])},\n",
@@ -866,7 +872,7 @@
        "                       'colorscale': [[0, 'lightgray'], [1, 'red']],\n",
        "                       'shape': 'hspline'},\n",
        "              'type': 'parcats',\n",
-       "              'uid': '7d189f54-bbd5-4241-925a-cf105786ad6e'}],\n",
+       "              'uid': 'd8d8d6d6-72bf-4189-a643-c72a847c8ad7'}],\n",
        "    'layout': {'dragmode': 'lasso',\n",
        "               'height': 800,\n",
        "               'hovermode': 'closest',\n",
@@ -877,7 +883,7 @@
        "})"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +978,7 @@
     "    elif x == 'P (Novel)':\n",
     "        return f\"P (Novel) (n = {n_p_novel})\"\n",
     "    elif x == 'Inheritance mismatch':\n",
-    "        return f\"Inheritance mismatch (n = {n_inhmismatch})\"\n",
+    "        return f\"Mismatched inheritance (n = {n_inhmismatch})\"\n",
     "    else:\n",
     "        return x\n",
     "\n",
@@ -989,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,13 +1014,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34ef38772f2142d0a2fa236ad0094969",
+       "model_id": "653e57e7e9d1413383809c4ff40649ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1022,7 +1028,7 @@
        "VBox(children=(ToggleButtons(description='Brush Color:', index=1, options=('None', 'Red', 'Blue', 'Orange', 'G…"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
