--- a/ValidationData/TP/additional/hgmd_non_splicing.ipynb
+++ b/ValidationData/TP/additional/hgmd_non_splicing.ipynb
@@ -9,11 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'liftover'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 39\u001b[0m\n\u001b[1;32m     36\u001b[0m     Path()\u001b[38;5;241m.\u001b[39mresolve()\n\u001b[1;32m     37\u001b[0m     sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(Path()\u001b[38;5;241m.\u001b[39mresolve(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../../\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m---> 39\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlibs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m utils, preprocess, variantfilter, posparser, splaiparser\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m# from libs import predeffect, scoring\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlibs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m anno_spliceai, anno_clinvar\n",
+      "File \u001b[0;32m/Volumes/SSD_480GB/workspace/Github/dev/ValidationData/TP/additional/../../../libs/posparser.py:7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpysam\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mBio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mSeq\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Seq\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mliftover\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_lifter\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m############ Functions for analysis ############\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mclassifying_canonical\u001b[39m(df: pd\u001b[38;5;241m.\u001b[39mDataFrame) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame:\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'liftover'"
+     ]
+    }
+   ],
    "source": [
-    "# conda create -n sss python=3.8 && conda activate sss\n",
+    "# conda create -n sss python=3.8 -y && conda activate sss\n",
     "# conda install -y -c bioconda gffutils jupyter tqdm cyvcf2 pathlib2 pandarallel pysam liftover pybedtools\n",
     "\n",
     "import os\n",
@@ -2081,7 +2094,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sss",
+   "display_name": "wesanno",
    "language": "python",
    "name": "python3"
   },
@@ -2095,7 +2108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.9.19"
   },
   "orig_nbformat": 4
  },
