--- a/ValidationData/TP/additional/hgmd_non_splicing copy 2.ipynb
+++ b/ValidationData/TP/additional/hgmd_non_splicing copy 2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,16 +60,16 @@
     "\n",
     "gencode_gff = '../../../Resources/05_GENCODE_v43lift37/gencode.v43lift37.annotation.sort.gff3.gz'\n",
     "\n",
-    "try:\n",
-    "    db_anno_gencode = '../../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.gtf.db'\n",
-    "    db_anno_intron = '../../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.intron.gtf.db'\n",
-    "    db = gffutils.FeatureDB(db_anno_gencode)\n",
-    "    db_intron = gffutils.FeatureDB(db_anno_intron)\n",
-    "except ValueError:\n",
-    "    db_anno_gencode = '/resources/DBs/gencode.v43lift37.annotation.gtf.db'\n",
-    "    db_anno_intron = '/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db'\n",
-    "    db = gffutils.FeatureDB(db_anno_gencode)\n",
-    "    db_intron = gffutils.FeatureDB(db_anno_intron)\n",
+    "# try:\n",
+    "#     db_anno_gencode = '../../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.gtf.db'\n",
+    "#     db_anno_intron = '../../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.intron.gtf.db'\n",
+    "#     db = gffutils.FeatureDB(db_anno_gencode)\n",
+    "#     db_intron = gffutils.FeatureDB(db_anno_intron)\n",
+    "# except ValueError:\n",
+    "#     db_anno_gencode = '/resources/DBs/gencode.v43lift37.annotation.gtf.db'\n",
+    "#     db_anno_intron = '/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db'\n",
+    "#     db = gffutils.FeatureDB(db_anno_gencode)\n",
+    "#     db_intron = gffutils.FeatureDB(db_anno_intron)\n",
     "\n",
     "## Thresholds configuration\n",
     "thresholds_SpliceAI_parser: dict = {\n",
@@ -1199,26 +1199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRemoteTraceback\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;31mRemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/Volumes/SSD_480GB/utsu/miniconda3/envs/gakui/lib/python3.8/multiprocessing/pool.py\", line 125, in worker\n    result = (True, func(*args, **kwds))\n  File \"/Volumes/SSD_480GB/utsu/miniconda3/envs/gakui/lib/python3.8/multiprocessing/pool.py\", line 51, in starmapstar\n    return list(itertools.starmap(args[0], args[1]))\n  File \"/Volumes/SSD_480GB/utsu/miniconda3/envs/gakui/lib/python3.8/site-packages/pandarallel/core.py\", line 158, in __call__\n    results = self.work_function(\n  File \"/Volumes/SSD_480GB/utsu/miniconda3/envs/gakui/lib/python3.8/site-packages/pandarallel/data_types/dataframe.py\", line 32, in work\n    return data.apply(\n  File \"/Volumes/SSD_480GB/utsu/miniconda3/envs/gakui/lib/python3.8/site-packages/pandas/core/frame.py\", line 9423, in apply\n    return op.apply().__finalize__(self, method=\"apply\")\n  File \"/Volumes/SSD_480GB/utsu/miniconda3/envs/gakui/lib/python3.8/site-packages/pandas/core/apply.py\", line 678, in apply\n    return self.apply_standard()\n  File \"/Volumes/SSD_480GB/utsu/miniconda3/envs/gakui/lib/python3.8/site-packages/pandas/core/apply.py\", line 798, in apply_standard\n    results, res_index = self.apply_series_generator()\n  File \"/Volumes/SSD_480GB/utsu/miniconda3/envs/gakui/lib/python3.8/site-packages/pandas/core/apply.py\", line 814, in apply_series_generator\n    results[i] = self.f(v)\n  File \"/var/folders/60/yz_x62ts3ln6z030yykm0h2r0000gn/T/ipykernel_3038/4262163505.py\", line 14, in anno_hg19_pos\n    return converted[1]\nTypeError: 'NoneType' object is not subscriptable\n\"\"\"",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 19\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m converted[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# sampledf = allmut_dm_maf0_snv.sample(100)\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# sampledf['POS_hg19'] = sampledf.parallel_apply(anno_hg19_pos, axis=1)\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m allmut_dm_maf0_snv[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPOS_hg19\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mallmut_dm_maf0_snv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparallel_apply\u001b[49m\u001b[43m(\u001b[49m\u001b[43manno_hg19_pos\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     21\u001b[0m allmut_dm_maf0_snv\u001b[38;5;241m.\u001b[39mto_pickle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mallmut_dm_maf0_snv_liftover.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m/Volumes/SSD_480GB/utsu/miniconda3/envs/gakui/lib/python3.8/site-packages/pandarallel/core.py:444\u001b[0m, in \u001b[0;36mparallelize_with_pipe.<locals>.closure\u001b[0;34m(data, user_defined_function, *user_defined_function_args, **user_defined_function_kwargs)\u001b[0m\n\u001b[1;32m    441\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m worker_status \u001b[38;5;241m==\u001b[39m WorkerStatus\u001b[38;5;241m.\u001b[39mError:\n\u001b[1;32m    442\u001b[0m         progress_bars\u001b[38;5;241m.\u001b[39mset_error(worker_index)\n\u001b[0;32m--> 444\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mresults_promise\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    446\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m data_type\u001b[38;5;241m.\u001b[39mreduce(results, reduce_extra)\n",
-      "File \u001b[0;32m/Volumes/SSD_480GB/utsu/miniconda3/envs/gakui/lib/python3.8/multiprocessing/pool.py:771\u001b[0m, in \u001b[0;36mApplyResult.get\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    769\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_value\n\u001b[1;32m    770\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 771\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_value\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert startCoord to hg19\n",
     "from liftover import get_lifter\n",
@@ -1245,6 +1228,61 @@
     "\n",
     "allmut_dm_maf0_snv.to_pickle('allmut_dm_maf0_snv_liftover.pkl')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "長い作業終わった(liftover)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allmut_dm_maf0_snv_hg19 = pd.read_pickle('allmut_dm_maf0_snv_liftover.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "154107\n",
+      "154107\n"
+     ]
+    }
+   ],
+   "source": [
+    "allmut_dm_maf0_snv_hg19.rename(columns={'POS_hg19': 'POS'}, inplace=True)\n",
+    "print(len(allmut_dm_maf0_snv_hg19))\n",
+    "allmut_dm_maf0_snv_hg19.drop(columns=['POS'], inplace=True)\n",
+    "print(len(allmut_dm_maf0_snv_hg19))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(9)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1903,7 +1941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.20"
   },
   "orig_nbformat": 4
  },
